fixed alignments

--- a/src/app/pages/wallet/wallet.component.scss
+++ b/src/app/pages/wallet/wallet.component.scss
@@ -57,4 +57,8 @@ hr{
         padding:1.4rem 1rem;
         opacity: .5;
     }
+    .activeTab{
+        border-right: 4px solid #a63da1 !important;
+        opacity: 1;
+    }
 }
